--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,22 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.support:design:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    compile "com.android.support:support-v4:26.1.0"
+    compile 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     //rx
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //    compile 'me.yokeyword:fragmentation:1.1.10'
+    //    compile 'me.yokeyword:fragmentation-core:1.1.10'
+    //    compile 'me.yokeyword:fragmentation-swipeback:1.1.10'
+    compile 'me.yokeyword:eventbus-activity-scope:1.1.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    implementation project(':fragmentation')
+    implementation project(':fragmentation_core')
+    implementation project(':fragmentation_swipeback')
+
 }
