--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:theme="@style/AppTheme">
+        android:name=".App"
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".MainActivity"
             >
@@ -24,6 +24,9 @@
         <activity
             android:name=".ui.activity.Setting2Activity"
             android:screenOrientation="sensorLandscape"/>
+        <activity
+            android:name=".simple.SimpleActivity"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
