--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.mvp.lt.flyset">
 
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true"/>
+
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".App"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".MainActivity"
@@ -30,6 +40,13 @@
         <activity
             android:name=".task.TaskActivity"
             android:launchMode="singleTask"/>
+        <activity android:name=".blue.DevicesConectActivity"/>
+        <activity android:name=".blue.DeviceControlActivity"/>
+        <activity android:name=".seekbar.HorizontalSeekActivity"/>
+
+        <service
+            android:name="com.mvp.lt.flyset.blue.BluetoothLeService"
+            android:enabled="true"/>
     </application>
 
 </manifest>
