--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,33 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a'
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
+    packagingOptions{
+        doNotStrip "*/*/libdjivideo.so"
+        doNotStrip "*/*/libSDKRelativeJNI.so"
+        doNotStrip "*/*/libFlyForbid.so"
+        doNotStrip "*/*/libduml_vision_bokeh.so"
+        doNotStrip "*/*/libyuv2.so"
+        doNotStrip "*/*/libGroudStation.so"
+        doNotStrip "*/*/libFRCorkscrew.so"
+        doNotStrip "*/*/libUpgradeVerify.so"
+        doNotStrip "*/*/libFR.so"
     }
 }
 
@@ -28,7 +48,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
-
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //rx
@@ -43,5 +62,12 @@ dependencies {
     implementation project(':fragmentation')
     implementation project(':fragmentation_core')
     implementation project(':fragmentation_swipeback')
+    implementation files('libs/Msc.jar')
 
+    //eventbus
+    compile 'com.squareup:otto:1.3.8'
+    compile 'com.dji:dji-uilibrary:4.4.1'
+    compile 'com.dji:dji-sdk:4.4.1'
+    provided 'com.dji:dji-sdk-provided:4.4.1'
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
